--- a/assets/style.css
+++ b/assets/style.css
@@ -242,7 +242,7 @@ section {
 
 
 #discover  {
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-size: 3rem;
     font-family: "Roboto Slab", serif;
 }
@@ -255,20 +255,59 @@ h2 {
     height: 100vh;
 }
 
+/* #mainteam img {
+    height: 450px;
+    width: 250px;
+} */
+
+.card {
+    height: 355px;
+    width: 100px;
+    border: none !important;
+}
+
 .card-img {
-    width: 100%;
-    opacity: 0 !important;
+    opacity: 0;
     transition: opacity 0.5s ease-in-out;
 }
 
+.card-img2 {
+    width: 100%;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.sponsors {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    color: red;
+    padding-top: 15px;
+    font-family: "Roboto Slab", serif;
+}
 
 
+.partofit {
+    font-size: 1rem !important;
+    width: 200px !important;
+    height: 50px;
+    font-size: 1.3rem;
+    border-radius: 10px;
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+}
+
+#formform {
+    /* height: 800px !important; */
+}
 
 
-
-
-
-
+.error {
+    width: 30%;
+    padding: 5px;
+    background-color: pink;
+    border-radius: 10px;
+}
 
 
 
